--- a/cody/comparing-cody-vs-continue.mdx
+++ b/cody/comparing-cody-vs-continue.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Sourcegraph Cody vs. Continue: Comparing AI Code Generation tools (2025)'
+title: 'Cody vs. Continue: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-cody-vs-continue.svg'
@@ -7,7 +7,7 @@ summary: 'A comprehensive comparison of Sourcegraph Cody and Continue, two leadi
 keywords: 'Sourcegraph Cody, Continue, AI code assistant, code completion, developer tools, IDE integration, code generation, AI programming'
 metaTitle: 'Sourcegraph Cody vs Continue: The Ultimate AI Code Assistant Comparison (2025)'
 metaDescription: 'Detailed comparison of Sourcegraph Cody and Continue, exploring their features, pricing, and capabilities to help developers choose the right AI coding assistant for their needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-continue'
 ---
 
 As AI-powered developor tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Continue](https://www.continue.dev/) stand out as two prominent solutions in the market. Both offer robust IDE integration and AI code completion, but they differ significantly in their approach to licensing and enterprise features. 
@@ -36,7 +36,7 @@ This comparison will help you understand the key differences and make an informe
 
 ## Code Completion
 
-### Sourcegraph Cody
+### Cody
 Cody offers sophisticated code completion capabilities with context-aware suggestions drawn from your entire codebase, and excels at maintaining consistent coding patterns and reducing common errors through its intelligent completion system. The tool provides both line-by-line and full-function completions, with strong support for multiple programming languages and configuration files.
 
 ### Continue
@@ -44,7 +44,7 @@ Continue provides a flexible code completion system with streaming diff previews
 
 ## AI Chat Capabilities
 
-### Sourcegraph Cody
+### Cody
 Cody's chat functionality is deeply integrated with codebase context, featuring an @-mention system for adding specific context from files, symbols, and repositories. The chat interface supports multi-file context and provides enterprise-grade collaboration tools for team environments. In addition, the context window is configurable, allowing for optimization between response quality and performance.
 
 ### Continue
@@ -52,7 +52,7 @@ Continue offers an integrated chat interface directly within your IDE, eliminati
 
 ## Context Awareness
 
-### Sourcegraph Cody
+### Cody
 Cody employs multiple context retrieval methods including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It offers comprehensive repository analysis and intelligent code understanding, which is particularly powerful in the Enterprise tier with features like OpenCtx capabilities and remote file/directory access.
 
 ### Continue
@@ -60,7 +60,7 @@ Continue provides contextual awareness through its integrated development enviro
 
 ## Privacy and Security
 
-### Sourcegraph Cody
+### Cody
 Cody offers enterprise-grade security features, particularly in its Enterprise tier, with enhanced security controls and organization-wide management capabilities. However, being a closed-source solution means users must trust Sourcegraph's security implementations without the ability to audit the code directly.
 
 ### Continue
@@ -68,7 +68,7 @@ As an open-source solution, Continue provides complete transparency in its secur
 
 ## Pricing
 
-### Sourcegraph Cody
+### Cody
 - **Free Tier**
   - Free for individual users
   - Single repository access
@@ -87,17 +87,21 @@ As an open-source solution, Continue provides complete transparency in its secur
   - Custom deployment options
 
 ### Continue
-- **Open Source**
-  - Completeley free for individuals
-  - Enterprise plan available
-  - Full feature access
-  - No usage limitations
-  - Community support
-  - Self-hosting capabilities
-  - Regular updates and improvements
+- **Free Open Source**
+  - Free forever
+  - Real-time code suggestions
+  - Automated refactoring
+  - Testing and debugging assistance
+  - Seamless IDE integration
+- **Enterprise**
+  - Enhanced features
+  - Scalability
+  - Enhanced security and privacy
+  - Dedicated support
+  - Collaboration tools
 
 ## Conclusion
 
-Sourcegraph Cody and Continue represent two different approaches to AI programming and development. Cody offers a polished, enterprise-ready solution with sophisticated features and tiered pricing, making it ideal for large organizations requiring managed services and enhanced security controls. Its strength lies in its comprehensive enterprise features and deep integration with existing development workflows.
+Cody and Continue represent two different approaches to AI programming and development. Cody offers a polished, enterprise-ready solution with sophisticated features and tiered pricing, making it ideal for large organizations requiring managed services and enhanced security controls. Its strength lies in its comprehensive enterprise features and deep integration with existing development workflows.
 
 Continue, on the other hand, stands out with its open-source approach, offering complete transparency and customization capabilities without any cost. It's particularly attractive for developers and organizations who value flexibility, want to maintain control over their tools, or need to modify the solution to meet specific requirements. While it may require more setup and configuration compared to Cody, its active community and regular updates make it a robust choice for those willing to invest time in its customization.
