--- a/cody/comparing-cody-vs-qodo.mdx
+++ b/cody/comparing-cody-vs-qodo.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Sourcegraph Cody vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
+title: 'Cody vs. Qodo Gen: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-cody-vs-qodo.svg'
@@ -7,7 +7,7 @@ summary: 'An in-depth comparison of Sourcegraph Cody and Qodo Gen, exploring the
 keywords: 'Sourcegraph Cody, Qodo Gen, AI coding assistant, code completion, developer tools, IDE integration, code generation, AI programming tools'
 metaTitle: 'Sourcegraph Cody vs Qodo Gen - AI Code Assistant Comparison (2025)'
 metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Qodo Gen, including features, pricing, and capabilities to help developers choose the best AI coding assistant for their needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-qodo'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both tools offer comprehensive AI-assisted code completion, but differ significantly in their approach to test generation and context handling. 
@@ -36,7 +36,7 @@ This comparison will help you understand the key differences and make an informe
 
 ## Code Completion
 
-### Sourcegraph Cody
+### Cody
 Sourcegraph Cody offers intelligent code completion with context-aware suggestions based on your entire codebase. It maintains consistent coding patterns, while reducing common errors through its advanced understanding of code relationships and repository analysis. The system provides both single-line and full-function completions, with customizable context window sizes for optimal performance.
 
 ### Qodo Gen
@@ -44,7 +44,7 @@ Qodo Gen provides smart code completion with real-time suggestions across all ma
 
 ## AI Chat Capabilities
 
-### Sourcegraph Cody
+### Cody
 Cody's chat functionality is deeply integrated with codebase context, featuring an @-mention system for precise context retrieval. Each chat interaction considers multiple context sources, including Keyword Search, Sourcegraph Search API, and Code Graph analysis, ensuring relevant and accurate responses. The system supports both open files and repository-wide context.
 
 ### Qodo Gen
@@ -52,7 +52,7 @@ Qodo Gen's chat interface focuses on providing real-time coding assistance throu
 
 ## Context Awareness
 
-### Sourcegraph Cody
+### Cody
 Sourcegraph Cody excels in context awareness, with multiple context retrieval methods. It offers configurable context window sizes and token limit optimization, allowing developers to balance between response quality and performance. The enterprise tier also provides enhanced context capabilities including remote file access and OpenCtx integration.
 
 ### Qodo Gen
@@ -60,7 +60,7 @@ Qodo Gen's context awareness focuses on current file analysis and git diff under
 
 ## Privacy and Security
 
-### Sourcegraph Cody
+### Cody
 While specific privacy details aren't extensively documented, Sourcegraph Cody provides enterprise-grade security features, including enhanced security controls for business environments. Meanwhile, the enterprise tier offers team-specific security measures and organizational control over repository access.
 
 ### Qodo Gen
@@ -68,7 +68,7 @@ Qodo Gen implements strong privacy measures, including encryption for all transm
 
 ## Pricing
 
-### Sourcegraph Cody
+### Cody
 - **Free Tier**
   - Free for individual users
   - Single repository access
