--- a/cody/comparing-cody-vs-replit.mdx
+++ b/cody/comparing-cody-vs-replit.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Sourcegraph Cody vs. Replit AI: Comparing AI Code Generation tools (2025)'
+title: 'Cody vs. Replit AI: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-cody-vs-replit.svg'
@@ -7,7 +7,7 @@ summary: 'An in-depth comparison of Sourcegraph Cody and Replit AI, analyzing th
 keywords: 'Sourcegraph Cody, Replit AI, AI code generation, developer tools, code completion, IDE integration, AI programming assistant, code analysis'
 metaTitle: 'Sourcegraph Cody vs Replit AI: The Ultimate Comparison Guide (2025)'
 metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Replit AI features, pricing, and capabilities to help developers choose the best AI coding assistant for their needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-replit'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Replit AI](https://replit.com/) stand out as two prominent solutions in the market. Both offer powerful AI-assisted code analysis, but while Sourcegraph Cody focuses on deep codebase integration and multi-IDE integration, Replit AI provides a more web-centric, full-stack development experience. 
@@ -36,7 +36,7 @@ This comparison will help you understand the key differences and make an informe
 
 ## Code Completion
 
-### Sourcegraph Cody
+### Cody
 Cody offers sophisticated code completion with context-aware suggestions drawn from your entire codebase. It maintains consistent coding patterns and reduces common errors through intelligent completion that understands both the local and global context of your code. The system integrates seamlessly across multiple IDEs and supports a wide range of programming languages.
 
 ### Replit AI
@@ -44,7 +44,7 @@ Replit's Complete Code feature provides contextual code suggestions activated by
 
 ## AI Chat Capabilities
 
-### Sourcegraph Cody
+### Cody
 Cody's chat functionality is deeply integrated with codebase context, allowing developers to reference specific files and symbols using @-mentions. The chat system understands complex queries across multiple files and provides detailed, context-aware responses that incorporate knowledge from the entire codebase.
 
 ### Replit AI
@@ -52,7 +52,7 @@ Replit's AI Chat operates directly within the workspace, offering real-time codi
 
 ## Context Awareness
 
-### Sourcegraph Cody
+### Cody
 Cody demonstrates superior context awareness through multiple context retrieval methods, including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It maintains context across multiple repositories and supports remote file/directory access in the Enterprise tier, making it particularly powerful for large-scale development projects.
 
 ### Replit AI
@@ -60,7 +60,7 @@ Replit's context awareness is primarily focused within its web-based environment
 
 ## Privacy and Security
 
-### Sourcegraph Cody
+### Cody
 The Enterprise tier offers enhanced security measures for business environments, including repository-level permissions and organizational control over data access. While specific privacy details aren't fully detailed, the platform provides scalable infrastructure and secure context handling capabilities.
 
 ### Replit AI
@@ -68,7 +68,7 @@ While specific privacy measures aren't explicitly detailed in the documentation,
 
 ## Pricing
 
-### Sourcegraph Cody
+### Cody
 - **Free Tier**
   - Free for individual users
   - Single repository access
