--- a/cody/comparing-cody-vs-tabnine.mdx
+++ b/cody/comparing-cody-vs-tabnine.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Sourcegraph Cody vs. Tabnine: Comparing AI Code Generation tools (2025)'
+title: 'Cody vs. Tabnine: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-cody-vs-tabnine.svg'
@@ -7,7 +7,7 @@ summary: 'An in-depth comparison of Sourcegraph Cody and Tabnine, exploring thei
 keywords: 'Sourcegraph Cody, Tabnine, AI code completion, developer tools, code generation, IDE integration, AI coding assistant, code analysis'
 metaTitle: 'Sourcegraph Cody vs Tabnine: AI Code Assistant Comparison (2025)'
 metaDescription: 'Comprehensive comparison of Sourcegraph Cody and Tabnine, analyzing features, pricing, and capabilities to help developers choose the best AI coding assistant for their needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cody-vs-tabnine'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [Sourcegraph Cody](https://sourcegraph.com/) and [Tabnine](https://www.tabnine.com/) stand out as two prominent solutions in the market. Both tools offer sophisticated code generation and AI assistance, but they differ significantly in their approach to context handling and deployment options. 
@@ -36,7 +36,7 @@ This comparison will help you understand the key differences and make an informe
 
 ## Code Completion
 
-### Sourcegraph Cody
+### Cody
 Cody offers intelligent code completion with deep codebase understanding, leveraging multiple context retrieval methods including Keyword Search and Code Graph analysis. It provides context-aware suggestions that maintain consistent coding patterns, and supports automatic code completion across multiple programming languages.
 
 ### Tabnine
@@ -44,7 +44,7 @@ Tabnine excels with its whole-line and full-function suggestions, offering adapt
 
 ## AI Chat Capabilities
 
-### Sourcegraph Cody
+### Cody
 Cody features a context-aware chat interface that understands codebase context, with support for @-mentions to retrieve specific context from files, symbols, and repositories. It provides interactive debugging and error identification through the chat interface.
 
 ### Tabnine
@@ -52,7 +52,7 @@ Tabnine Chat offers code-aware conversations directly integrated into the IDE, f
 
 ## Context Awareness
 
-### Sourcegraph Cody
+### Cody
 Cody employs sophisticated context management with configurable window sizes and multiple retrieval methods. It offers enterprise-grade context features, including remote file/directory access and OpenCtx capabilities, making it particularly strong for large codebases.
 
 ### Tabnine
@@ -60,7 +60,7 @@ Tabnine focuses on personalized context awareness, learning from your coding pat
 
 ## Privacy and Security
 
-### Sourcegraph Cody
+### Cody
 While specific privacy details aren't extensively documented, Cody provides enhanced security measures for business environments in its Enterprise tier, with repository-level permissions and secure context handling.
 
 ### Tabnine
@@ -68,7 +68,7 @@ Tabnine places a strong emphasis on privacy with end-to-end encryption, no third
 
 ## Pricing
 
-### Sourcegraph Cody
+### Cody
 - **Free Tier**
   - Free for individual users
   - Single repository access
@@ -100,7 +100,7 @@ Tabnine places a strong emphasis on privacy with end-to-end encryption, no third
 
 ## Conclusion
 
-Sourcegraph Cody and Tabnine each bring unique strengths to AI-powered development assistance. Cody excels in its comprehensive codebase understanding and enterprise-focused features, making it particularly suitable for large teams working across multiple repositories. Its strong context awareness and integration capabilities make it a powerful tool for complex development environments.
+Cody and Tabnine each bring unique strengths to AI-powered development assistance. Cody excels in its comprehensive codebase understanding and enterprise-focused features, making it particularly suitable for large teams working across multiple repositories. Its strong context awareness and integration capabilities make it a powerful tool for complex development environments.
 
 Tabnine, on the other hand, stands out with its emphasis on privacy and security, along with highly personalized code completion features. Its adaptive learning capabilities and flexible deployment options make it an excellent choice for both individual developers and security-conscious organizations. 
 
