--- a/copilot/comparing-copilot-vs-cody.mdx
+++ b/copilot/comparing-copilot-vs-cody.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'GitHub Copilot vs. Sourcegraph Cody: Comparing AI Code Generation tools (2025)'
+title: 'GitHub Copilot vs. Cody: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-copilot-vs-cody.svg'
@@ -7,7 +7,7 @@ summary: 'A detailed comparison of GitHub Copilot and Sourcegraph Cody, explorin
 keywords: 'GitHub Copilot, Sourcegraph Cody, AI code generation, developer tools comparison, code completion, AI pair programming'
 metaTitle: 'GitHub Copilot vs Sourcegraph Cody: The Ultimate Comparison Guide (2025)'
 metaDescription: 'Comprehensive comparison of GitHub Copilot and Sourcegraph Cody, including features, pricing, and real-world applications for developers making an informed choice between AI coding assistants.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-copilot-vs-cody'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [GitHub Copilot](https://github.com/home) and [Sourcegraph Cody](https://sourcegraph.com/) stand out as two prominent solutions in the market. Both offer sophisticated code completion and AI assistance, but they differ significantly in their approach to context handling and enterprise features. 
@@ -39,7 +39,7 @@ This comparison will help you understand the key differences and make an informe
 ### GitHub Copilot
 GitHub Copilot offers real-time code suggestions as you type, providing whole-line and full-function completions across multiple programming languages. Its strength lies in understanding context from your codebase and providing inline suggestions that maintain consistency with your coding style. The tool also excels at repetitive code patterns and can convert comments to functional code.
 
-### Sourcegraph Cody
+### Cody
 Sourcegraph Cody provides context-aware code completion with a focus on maintaining consistency with existing codebases. It leverages multiple context retrieval methods, including Keyword Search and Code Graph analysis, to provide more accurate suggestions. The tool is particularly strong in understanding repository-wide patterns and generating style-consistent code.
 
 ## AI Chat Capabilities
@@ -47,7 +47,7 @@ Sourcegraph Cody provides context-aware code completion with a focus on maintain
 ### GitHub Copilot
 GitHub Copilot's chat functionality is available directly in IDEs, through GitHub.com, and via mobile apps. It offers natural language coding assistance, code explanations, debugging help, and architecture suggestions. The chat interface can handle complex queries and provide detailed explanations of code functionality.
 
-### Sourcegraph Cody
+### Cody
 Cody's chat interface is deeply integrated with its context understanding capabilities. It features an @-mention system for adding specific context from files, symbols, and repositories. The chat can handle multi-file context for complex queries, and provides intelligent responses based on comprehensive codebase analysis.
 
 ## Context Awareness
@@ -55,7 +55,7 @@ Cody's chat interface is deeply integrated with its context understanding capabi
 ### GitHub Copilot
 GitHub Copilot processes context from your current file, open editors, and related project files. It maintains context awareness across different file types and can understand project-wide patterns. The tool excels at suggesting code that fits within the existing project structure and coding conventions.
 
-### Sourcegraph Cody
+### Cody
 Sourcegraph Cody takes a more comprehensive approach to context, utilizing multiple retrieval methods including Keyword Search, Sourcegraph Search API, and Code Graph analysis. It can understand context across entire repositories and maintain awareness of code relationships, making it particularly strong for large-scale codebases.
 
 ## Privacy and Security
@@ -63,7 +63,7 @@ Sourcegraph Cody takes a more comprehensive approach to context, utilizing multi
 ### GitHub Copilot
 GitHub Copilot emphasizes privacy with local processing of code suggestions, compliance with GitHub's privacy policy, and enterprise-grade security measures. It offers data encryption standards and doesn't store personal code. Users have the option to disable telemetry, and enterprise customers get additional security controls.
 
-### Sourcegraph Cody
+### Cody
 Cody provides enterprise-grade security controls with scalable infrastructure and organizational control over data access. It features repository-level permissions and secure context handling, making it suitable for sensitive enterprise environments.
 
 ## Pricing
@@ -89,7 +89,7 @@ Cody provides enterprise-grade security controls with scalable infrastructure an
   - 50GB of Packages storage
 
 
-### Sourcegraph Cody
+### Cody
 - **Free Tier**
   - Free for individual users
   - Single repository access
