--- a/cursor/comparing-cursor-vs-cody.mdx
+++ b/cursor/comparing-cursor-vs-cody.mdx
@@ -1,5 +1,5 @@
 ---
-title: 'Cursor vs. Sourcegraph Cody: Comparing AI Code Generation tools (2025)'
+title: 'Cursor vs. Cody: Comparing AI Code Generation tools (2025)'
 publishedAt: '2024-12-05'
 author: 'Everett Butler'
 image: '/compare/comparing-cursor-vs-cody.svg'
@@ -7,7 +7,7 @@ summary: 'An in-depth comparison of Cursor and Sourcegraph Cody, examining their
 keywords: 'Cursor, Sourcegraph Cody, AI code generation, code completion, developer tools, IDE integration, code assistant, AI programming'
 metaTitle: 'Cursor vs Sourcegraph Cody: AI Code Generation Tools Comparison (2025)'
 metaDescription: 'Comprehensive comparison of Cursor and Sourcegraph Cody, exploring their features, pricing, and capabilities to help developers make an informed choice for their AI-powered development needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cursor-vs-cody'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.cursor.com/) and [Sourcegraph Cody](https://sourcegraph.com/) stand out as two prominent solutions in the market. Both offer advanced AI-powered code completion, but while Cursor focuses on being a complete VS Code-based editor with integrated AI capabilities, Cody takes a more platform-agnostic approach with broader IDE support. 
