--- a/cursor/comparing-cursor-vs-qodo.mdx
+++ b/cursor/comparing-cursor-vs-qodo.mdx
@@ -7,7 +7,7 @@ summary: 'A comprehensive comparison of Cursor and Qodo Gen, two leading AI-powe
 keywords: 'Cursor, Qodo Gen, AI code generation, developer tools comparison, code completion, AI programming assistant, VS Code, IDE integration'
 metaTitle: 'Cursor vs Qodo Gen: AI Code Generation Tools Comparison (2025)'
 metaDescription: 'In-depth comparison of Cursor and Qodo Gen, exploring their features, pricing, and capabilities to help developers choose the right AI-powered development tool.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cursor-vs-qodo'
 ---
 
 As AI-powered development tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Qodo Gen](https://www.qodo.ai/) stand out as two prominent solutions in the market. Both offer sophisticated AI code generation, but while Cursor builds upon the familiar VS Code experience, Qodo Gen takes a more platform-agnostic approach with broader IDE integration. 
