--- a/cursor/comparing-cursor-vs-continue.mdx
+++ b/cursor/comparing-cursor-vs-continue.mdx
@@ -7,7 +7,7 @@ summary: 'A detailed comparison of Cursor and Continue, two leading AI-powered c
 keywords: 'Cursor, Continue, AI code editor, code completion, VS Code, development tools, AI programming, code assistant, IDE comparison'
 metaTitle: 'Cursor vs Continue: AI Code Editor Comparison (2025) | Complete Guide'
 metaDescription: 'Comprehensive comparison of Cursor and Continue AI code editors, analyzing features, pricing, and capabilities to help developers choose the right tool for their needs.'
-canonicalUrl: ''
+canonicalUrl: 'https://www.greptile.com/blog/comparing-cursor-vs-continue'
 ---
 
 As AI-powered developer tools continue to reshape how we write code, [Cursor](https://www.trycursor.com/) and [Continue](https://www.continue.dev/enterprise) stand out as two prominent solutions in the market. Both offer AI-powered code assistance and IDE integration, but while Cursor operates as a full VS Code fork with deep AI integration, Continue takes a more platform-agnostic approach as an open-source extension. 
